--- a/contato.css
+++ b/contato.css
@@ -101,7 +101,69 @@ nav a:hover::after {
   width: 100%;
 }
 
+.bloco {
+    max-width: 800px;
+    margin-top: 5px;
+    margin-left: 170px;
+    font-size: larger;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .contato {
+    margin-left: 170px;
+    margin-right: 170px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+button {
+    display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgb(22, 255, 255);
+      border: none;
+      cursor: pointer;
+      width: 200px;
+      height: 75px;
+      margin: 25px;
+      padding: 10px;
+      border-radius: 50%;
+      transition: transform 0.3s, background 0.3s;
+      font-size: 28px;
+      color: white;
+      size: 28px;
+}
+
+.email {
+    background-color: #ff0000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.email:hover {
+    background-color: #820000;
+    transform: scale(1.1);
+}
+
+.email i {
+    font-size: 35px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.email p {
+    font-size: 27px;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
     text-align: center;
-    margin-top: 50px;
+    justify-content: center;
+    align-items: center;
+    margin-left: -15px;
 }
